--- a/LA DV.ipynb
+++ b/LA DV.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ac4dc0",
+   "id": "6770dc3d",
    "metadata": {},
    "source": [
     "### Most of the meaningful attributes are clean\n",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32129f1b",
+   "id": "0c613d66",
    "metadata": {},
    "source": [
     "### Fixing time occ \n",
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200c9fe6",
+   "id": "8295f224",
    "metadata": {},
    "source": [
     "#### Adding mocodes"
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4daf5a6",
+   "id": "26bf1e25",
    "metadata": {},
    "source": [
     "#### More than 752 different codes"
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f971015d",
+   "id": "5b09f969",
    "metadata": {},
    "source": [
     "#### Question, which mocodes appear most frequently together?"
@@ -1901,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ac8ee9e4",
+   "id": "9fa068ec",
    "metadata": {},
    "outputs": [
     {
@@ -1956,8 +1956,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "4ba6ad93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DR_NO             257\n",
+       "Date Rptd         257\n",
+       "DATE OCC          257\n",
+       "TIME OCC          257\n",
+       "AREA              257\n",
+       "AREA NAME         257\n",
+       "Rpt Dist No       257\n",
+       "Part 1-2          257\n",
+       "Crm Cd            257\n",
+       "Mocodes           256\n",
+       "Vict Age          257\n",
+       "Vict Sex          257\n",
+       "Vict Descent      257\n",
+       "Premis Cd         257\n",
+       "Premis Desc       257\n",
+       "Weapon Used Cd     51\n",
+       "Weapon Desc        51\n",
+       "Status            257\n",
+       "Status Desc       257\n",
+       "Crm Cd 1          257\n",
+       "Crm Cd 2           92\n",
+       "Crm Cd 3            0\n",
+       "Crm Cd 4            0\n",
+       "LOCATION          257\n",
+       "Cross Street      199\n",
+       "LAT               257\n",
+       "LON               257\n",
+       "timeCorrected     257\n",
+       "timeLength        257\n",
+       "hourOfCrime       257\n",
+       "MocodesAll        257\n",
+       "MocodesLen        257\n",
+       "dfAllMoc          257\n",
+       "AllMoc            256\n",
+       "Name: HUMAN TRAFFICKING - COMMERCIAL SEX ACTS, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped = df.groupby('Crm Cd Desc').count().sort_values('DR_NO', ascending=False)\n",
+    "grouped.loc['HUMAN TRAFFICKING - COMMERCIAL SEX ACTS']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
-   "id": "8583f534",
+   "id": "e5e0bab5",
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +2047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c971871a",
+   "id": "21d24962",
    "metadata": {},
    "source": [
     "In the dataset description only F,M, and X is given. Not sure what H means. X means NA in the data."
@@ -2000,7 +2056,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7e18f162",
+   "id": "6bd5fff2",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a281c00",
+   "id": "de03a397",
    "metadata": {},
    "source": [
     "Looks like most of the crimes are reported to be around 12PM, and then it keeps a high number until midnight.\n",
